@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gnuconfig
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gnuconfig/ChangeLog,v 1.82 2014/08/06 01:12:52 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gnuconfig/ChangeLog,v 1.83 2014/08/06 01:13:22 vapier Exp $
+
+*gnuconfig-20140728 (06 Aug 2014)
+
+  06 Aug 2014; Mike Frysinger <vapier@gentoo.org> +gnuconfig-20140728.ebuild:
+  Version bump.
 
   06 Aug 2014; Mike Frysinger <vapier@gentoo.org> gnuconfig-20140212.ebuild:
   Stabilize for all.
